--- a/cis237Assignment6/cis237Assignment6.csproj
+++ b/cis237Assignment6/cis237Assignment6.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -159,12 +161,31 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\BeverageController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Beverage.cs">
+      <DependentUpon>Beverage1Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Beverage1Model.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Beverage1Model.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Beverage1Model.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Beverage1Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Beverage1Model.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Beverage1Model.edmx</DependentUpon>
+    </Compile>
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -179,6 +200,23 @@
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <EntityDeploy Include="Models\Beverage1Model.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>Beverage1Model.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\Beverage1Model.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Beverage1Model.edmx</DependentUpon>
+      <LastGenOutput>Beverage1Model.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Models\Beverage1Model.edmx.diagram">
+      <DependentUpon>Beverage1Model.edmx</DependentUpon>
+    </Content>
+    <Content Include="Models\Beverage1Model.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Beverage1Model.edmx</DependentUpon>
+      <LastGenOutput>Beverage1Model.cs</LastGenOutput>
+    </Content>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -226,6 +264,11 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Beverage\Create.cshtml" />
+    <Content Include="Views\Beverage\Delete.cshtml" />
+    <Content Include="Views\Beverage\Details.cshtml" />
+    <Content Include="Views\Beverage\Edit.cshtml" />
+    <Content Include="Views\Beverage\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -236,6 +279,9 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
