--- a/cis237Assignment6/cis237Assignment6.csproj
+++ b/cis237Assignment6/cis237Assignment6.csproj
@@ -269,6 +269,7 @@
     <Content Include="Views\Beverage\Details.cshtml" />
     <Content Include="Views\Beverage\Edit.cshtml" />
     <Content Include="Views\Beverage\Index.cshtml" />
+    <Content Include="Views\Home\Foo.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
